# CCDATSCL_PROJECT_COM222

./: .gitignore  Daily Log Records - WEEK1.csv  README.md  main.py  pullup_copy copy.ipynb  pullup_copy.ipynb  pullup_file.py  pullup_final.ipynb  pyproject.toml  requirements.txt  week3.csv  week_2.csv  week_4.csv  week_5.csv  week_6.csv
data/: pullup_logs.csv  pullup_logs_cleaned.csv  summary_statistics.csv
data/weekly_data/: week_1.csv  week_2.csv  week_3.csv  week_5.csv  week_6.csv  week_7.csv  week_8.csv  week_9.csv
weekly_data/: week_4.csv  week_6.csv
